[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Enemys/slimeEnemy.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemys/SlimeEnemy.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes-Hurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes-Hurtboxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes-Hurtboxes/HurtBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes-Hurtboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.99998
height = 8.00004

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 10.0

[sub_resource type="CircleShape2D" id=4]
radius = 52.0096

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id=6]
resource_name = "Default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "MoveUpdate"
}, {
"args": [  ],
"method": "MoveUpdate"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Default"

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Default/node = SubResource( 7 )
states/Default/position = Vector2( 320, 49 )
start_node = "Default"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="SlimeEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 4 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 5 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 8 )]

[node name="WanderController" parent="." instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
